# wch-rust

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config
board/: ch32v103.svd  memory.x  openocd.gdb  wch-riscv.cfg
src/: main.rs
