[package]
name = "wch-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.10.0"
riscv-rt = "0.10.0"
panic-halt = "0.2.0"

[dependencies.ch32v1]
version = "0.1.5"
features = ["ch32v103"]
